--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-grub-dash-front-end",
+  "name": "grub-dash-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
